@@ -78,7 +78,7 @@ $lang_label["field2"] = "Campo n. 2 (Riga singola)";
 $lang_label["field3"] = "Campo n. 3 (Testo intero)";
 $lang_label["no_access_title"] = "Non hai accesso a questa pagina";
 $lang_label["no_access_text"] = "L'accesso a questa pagina &egrave; ristretto ai soli utenti autorizzati, per favore contatta l'amministratore del sistema se hai bisogno di assistenza.<br><br>Ti informo che tutti i tentativi di accesso a questa pagina sono registrati nei registri di sicurezza del Database di Sistema di Pandora.";
-$lang_label["header_title"] = "Il Sistema di Monitoraggio Liberamente Distribuito";
+$lang_label["header_title"] = "Sistema di Monitoraggio Libero";
 $lang_label["gpl_notice"] = "&egrave; un <b>Free Software Project (Progetto di Software Libero), sottoposto ai termini di licenza GPL </b> ";
 $lang_label["gpl_used"] = "Progettato usando software e strumenti GPL";
 $lang_label["gen_date"] = "Pagina generata il ";
