@@ -1,3 +1,10 @@
+2006-11-06 Raul Mateos  <raulofpandora@gmail.com>
+
+	* index.php: Added FMS to title
+
+	* include/languages/language_es_es.php, language_en.php,
+	language_es_la.php, language_it.php: Remove "distributed" from title
+
 2006-10-31 Raul Mateos  <raulofpandora@gmail.com>
 
 	* operation/menu.php: Add highlighting when creating note in incidents
